--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=${PROD_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
-
+server.tomcat.accesslog.enabled=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db.migration/migration.sql
