--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=asan1999
 spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
 spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.defer-datasource-initialization=true
 spring.flyway.enabled=true
 server.tomcat.accesslog.enabled=true
 spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db.migration/migration.sql
 
 bot.name=peaksoft_java-test_bot
