--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=asan1999
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
@@ -9,7 +9,6 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db.migration/migration.sql
 
-bot.name=SpringTelegramAlbusbot
-bot.token=6513516397:AAFJY6BQufY6CU32SrOtM7V6K0LJfYX5qvU
-bot.name=
-bot.token=
+
+bot.name=@SpringDemoAsan99bot
+bot.token=6548706013:AAEcqtmLaDXoW54yKXbZkK5dKd4yhPZFa6g
