--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db.migration/migration.sql
 
 
-bot.name=@SpringDemoAsan99bot
-bot.token=6548706013:AAEcqtmLaDXoW54yKXbZkK5dKd4yhPZFa6g
+bot.name=
+bot.token=
